# tasklane

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  SKILL.md  bootstrap_prefect.py  pyproject.toml  run_timing_scenario.py  submit_experiment.py
.github/workflows/: ci.yml
docs/: README.zh-CN.md  SKILL-INSTALL.md
docs/plans/: 2026-03-22-prefect-command-scheduler-design.md  2026-03-22-test-strategy.md  2026-03-23-attached-cli-design.md  2026-03-23-tasklane-local-scheduler.md
scripts/: install-linux.sh  install-windows.ps1
src/prefect_command_scheduler/: __init__.py  bootstrap.py  cli.py  flows.py  models.py  routing.py  timing_analysis.py
src/tasklane/: __init__.py  attach.py  bootstrap.py  cli.py  flows.py  routing.py  scheduler.py  state.py
tests/: test_attach.py  test_bootstrap.py  test_cli.py  test_daemon.py  test_distribution.py  test_flows.py  test_models.py  test_routing.py  test_scheduler.py  test_state.py  test_timing_analysis.py
