[project]
name = "tasklane"
version = "0.1.0"
description = "Resource-aware local command scheduler for queued CPU/GPU experiment runs."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["scheduler", "experiments", "gpu", "sqlite", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.9,<3.0",
]

[project.scripts]
tasklane = "tasklane.cli:main"
tasklane-bootstrap = "tasklane.bootstrap:main"
pcs = "tasklane.cli:main"
pcs-bootstrap = "tasklane.bootstrap:main"
prefect-submit = "tasklane.cli:main"
prefect-bootstrap = "tasklane.bootstrap:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
